formulas.txt
python :   File "<string>", line 20
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 20:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'  Row {row_num}: AB={repr(vals[" AB\])[:20]}
                                           ^
SyntaxError: unterminated string literal (detected at line 20)
